--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -85,6 +85,12 @@
     <Compile Include="Libraries\Command\AudioCommands\PlayNextThemeCommand.cs" />
     <Compile Include="Libraries\Command\CycleLevelCommand.cs" />
     <Compile Include="Libraries\Command\EnemyFreezeCommand.cs" />
+    <Compile Include="Libraries\Command\Game State Commands\MenuStateCommands\MenuDownCommand.cs" />
+    <Compile Include="Libraries\Command\Game State Commands\MenuStateCommands\MenuLeftCommand.cs" />
+    <Compile Include="Libraries\Command\Game State Commands\MenuStateCommands\MenuPressCommand.cs" />
+    <Compile Include="Libraries\Command\Game State Commands\MenuStateCommands\MenuRightCommand.cs" />
+    <Compile Include="Libraries\Command\Game State Commands\MenuStateCommands\MenuExitCommand.cs" />
+    <Compile Include="Libraries\Command\Game State Commands\MenuStateCommands\MenuUpCommand.cs" />
     <Compile Include="Libraries\Command\Game State Commands\UnpauseGameCommand.cs" />
     <Compile Include="Libraries\Command\Game State Commands\PauseGameCommand.cs" />
     <Compile Include="Libraries\Command\ICameraCommand.cs" />
@@ -133,9 +139,16 @@
     <Compile Include="Libraries\GameObjects\Player\EnergyTankSprite.cs" />
     <Compile Include="Libraries\GameStates\GameStateMachine.cs" />
     <Compile Include="Libraries\GameStates\IGameState.cs" />
+    <Compile Include="Libraries\GameStates\MenuUtilities\MenuButtons\MenuButtonSprites\SimpleButtonSprite.cs" />
+    <Compile Include="Libraries\GameStates\MenuUtilities\MenuButtons\ResumeMenuButton.cs" />
+    <Compile Include="Libraries\GameStates\MenuUtilities\MenuButtons\AudioSettingsMenuButton.cs" />
+    <Compile Include="Libraries\GameStates\MenuUtilities\MenuButtons\IMenuButton.cs" />
     <Compile Include="Libraries\GameStates\States\GameOverState.cs" />
     <Compile Include="Libraries\GameStates\States\GameWinState.cs" />
     <Compile Include="Libraries\GameStates\States\ItemUpgradeSelectionState.cs" />
+    <Compile Include="Libraries\GameStates\States\MenuStates\AbstractMenu.cs" />
+    <Compile Include="Libraries\GameStates\States\MenuStates\InGameMenu.cs" />
+    <Compile Include="Libraries\GameStates\States\MenuStates\IMenuState.cs" />
     <Compile Include="Libraries\GameStates\States\RoomTransitionState.cs" />
     <Compile Include="Libraries\GameStates\States\PlayingState.cs" />
     <Compile Include="Libraries\GameStates\States\PausedState.cs" />
