--- a/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
+++ b/Super Metroidvania 3Million/CrossPlatformDesktopProject/Super Metroidvania 5Million.csproj
@@ -85,6 +85,7 @@
     <Compile Include="Libraries\Command\AudioCommands\PlayNextThemeCommand.cs" />
     <Compile Include="Libraries\Command\CycleLevelCommand.cs" />
     <Compile Include="Libraries\Command\EnemyFreezeCommand.cs" />
+    <Compile Include="Libraries\Command\Game State Commands\MenuStateCommands\OpenInGameMenuCommand.cs" />
     <Compile Include="Libraries\Command\Game State Commands\MenuStateCommands\MenuDownCommand.cs" />
     <Compile Include="Libraries\Command\Game State Commands\MenuStateCommands\MenuLeftCommand.cs" />
     <Compile Include="Libraries\Command\Game State Commands\MenuStateCommands\MenuPressCommand.cs" />
@@ -138,16 +139,20 @@
     <Compile Include="Libraries\GameObjects\Player\PlayerHUD.cs" />
     <Compile Include="Libraries\GameObjects\Player\EnergyTankSprite.cs" />
     <Compile Include="Libraries\GameStates\GameStateMachine.cs" />
-    <Compile Include="Libraries\GameStates\IGameState.cs" />
+    <Compile Include="Libraries\GameStates\MenuUtilities\MenuBackGroundSprite.cs" />
+    <Compile Include="Libraries\GameStates\States\IGameState.cs" />
     <Compile Include="Libraries\GameStates\MenuUtilities\MenuButtons\MenuButtonSprites\SimpleButtonSprite.cs" />
+    <Compile Include="Libraries\GameStates\MenuUtilities\MenuButtons\RestartMenuButton.cs" />
+    <Compile Include="Libraries\GameStates\MenuUtilities\MenuButtons\QuitMenuButton.cs" />
+    <Compile Include="Libraries\GameStates\MenuUtilities\MenuButtons\SettingsMenuButton.cs" />
     <Compile Include="Libraries\GameStates\MenuUtilities\MenuButtons\ResumeMenuButton.cs" />
     <Compile Include="Libraries\GameStates\MenuUtilities\MenuButtons\AudioSettingsMenuButton.cs" />
     <Compile Include="Libraries\GameStates\MenuUtilities\MenuButtons\IMenuButton.cs" />
     <Compile Include="Libraries\GameStates\States\GameOverState.cs" />
     <Compile Include="Libraries\GameStates\States\GameWinState.cs" />
     <Compile Include="Libraries\GameStates\States\ItemUpgradeSelectionState.cs" />
-    <Compile Include="Libraries\GameStates\States\MenuStates\AbstractMenu.cs" />
-    <Compile Include="Libraries\GameStates\States\MenuStates\InGameMenu.cs" />
+    <Compile Include="Libraries\GameStates\States\MenuStates\AbstractMenuState.cs" />
+    <Compile Include="Libraries\GameStates\States\MenuStates\InGameMenuState.cs" />
     <Compile Include="Libraries\GameStates\States\MenuStates\IMenuState.cs" />
     <Compile Include="Libraries\GameStates\States\RoomTransitionState.cs" />
     <Compile Include="Libraries\GameStates\States\PlayingState.cs" />
@@ -156,6 +161,7 @@
     <Compile Include="Libraries\SFactory\MapSpriteFactory.cs" />
     <Compile Include="Libraries\SFactory\ItemSpriteFactory.cs" />
     <Compile Include="Libraries\SFactory\PlayerSpriteFactory.cs" />
+    <Compile Include="Libraries\SFactory\MenuSpriteFactory.cs" />
     <Compile Include="Libraries\SFactory\ProjectilesSpriteFactory.cs" />
     <Compile Include="Libraries\SFactory\EnemySpriteFactory.cs" />
     <Compile Include="Libraries\SFactory\BlockSpriteFactory.cs" />
